Terraform is now working

--- a/guy-project/K8S/secret.yaml
+++ b/guy-project/K8S/secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: aws-secrets
 type: Opaque
 stringData:
-  AWS_ACCESS_KEY_ID: AKIAXLEKZJVVREN3MIWD
-  AWS_SECRET_ACCESS_KEY: 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
+  AWS_ACCESS_KEY_ID: AKIAXLEKZJVVRYI43OHN
+  AWS_SECRET_ACCESS_KEY: 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
